--- a/index.html
+++ b/index.html
@@ -46,27 +46,38 @@
         const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
         // Função para carregar os comentários do banco de dados
-        async function loadComments() {
-            let { data: comments, error } = await supabase
-                .from('comments')
-                .select('*')
-                .order('created_at', { ascending: false });
+       // Função para carregar os comentários do banco de dados
+async function loadComments() {
+    let { data: comments, error } = await supabase
+        .from('comments') // Nome da tabela no banco de dados
+        .select('*') // Selecionando todos os campos
+        .order('created_at', { ascending: false }); // Ordenando por data (decrescente)
 
-            if (error) {
-                console.error("Erro ao carregar comentários", error);
-                return;
-            }
+    if (error) {
+        console.error("Erro ao carregar comentários", error);
+        return;
+    }
 
-            const commentsList = document.getElementById('comments-list');
-            commentsList.innerHTML = '';  // Limpar os comentários antigos
+    // Obtendo o container onde os comentários serão exibidos
+    const commentsList = document.getElementById('comments-list');
+    
+    // Limpando os comentários antigos
+    commentsList.innerHTML = '';
 
-            comments.forEach(comment => {
-                const commentDiv = document.createElement('div');
-                commentDiv.classList.add('comment');
-                commentDiv.innerHTML = `<p><strong>${comment.user_id}</strong> disse: <br>${comment.comment}</p><small>${new Date(comment.created_at).toLocaleString()}</small>`;
-                commentsList.appendChild(commentDiv);
-            });
-        }
+    // Exibindo cada comentário
+    comments.forEach(comment => {
+        const commentDiv = document.createElement('div');
+        commentDiv.classList.add('comment');
+        commentDiv.innerHTML = `
+            <p><strong>${comment.user_id}</strong> disse: <br>${comment.comment}</p>
+            <small>${new Date(comment.created_at).toLocaleString()}</small>
+        `;
+        commentsList.appendChild(commentDiv);
+    });
+}
+
+// Chamar a função de carregar comentários quando a página for carregada
+loadComments();
 
         // Função para enviar um novo comentário
         document.getElementById('comment-form').addEventListener('submit', async (event) => {
