--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
             <!-- Exibição dos Comentários -->
             <div id="comments-list">
+                <h1>comentarios</h1>
                 <!-- Comentários carregados aparecerão aqui -->
             </div>
         </section>
