--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <script>
         // Configuração do Supabase
         const supabaseUrl = 'https://rfobseearydxqhgszlgy.supabase.co';  // Substitua pela URL do seu projeto
-        const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJmb2JzZWVhcnlkeHFoZ3N6bGd5Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzkwNTY0MzEsImV4cCI6MjA1NDYzMjQzMX0.csF5Iv595Bw80vQC0eqoZ2hms-CPhgkkZ3rxL6Itl5Y';  // Substitua pela chave anon
+        const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJmb2JzZWVhcnlkeHFoZ3N6bGd5Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzkwNTY0MzEsImV4cCI6MjA1NDYzMjQzMX0.csF5Iv595Bw80vQC0eqoZ2hms-CPhgkkZ3rxL6Itl5Y";  // Substitua pela chave anon
         const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
         // Função para carregar os comentários do banco de dados
